--- a/public/css/dashboardPanel.css
+++ b/public/css/dashboardPanel.css
@@ -21,6 +21,10 @@ body {
   background-origin: padding-box, padding-box;
 }
 
+strong, b {
+  font-weight: bolder;
+}
+
 ul {
   list-style: none;
 }
@@ -30,8 +34,14 @@ li{
 }
 
 h2 {
-  font-weight: 500;
-  margin-bottom: 20px;
+  font-size: 18px;
+  margin: 30px 0px 5px 5px;
+}
+
+h3{
+  font-size: 16px;
+  text-shadow: 0 1px 0 white;
+  margin: 20px 0px 5px 5px;
 }
 
 dl {
@@ -268,6 +278,72 @@ footer {
   -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, .9);
 }
 
+#dataSetsPanelContent, #discussionPanelContent{
+  padding: 10px 15px 15px 0px;
+}
+
+.dataSetLabel{
+  margin-right: 75px;
+  font-size: 14px;
+}
+
+.dataSetInfo{
+  padding: 10px;
+  background-color: white;
+  margin: 0px 0px 10px 0px;
+  border-radius: 5px;
+  border-style: solid;
+  border-color: #afaeb0;
+  border-width: 1px;
+}
+
+.commentBox{
+  height: 135px;
+  padding: 0px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  border: 1px solid #afaeb0;
+  font-size: 14px;
+  -moz-box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+}
+
+.commentBox p{
+  color: #464547;
+}
+
+#messagesList li{
+  margin: 0px;
+}
+
+.commentBox div.meta{
+  height: 34px;
+  border-radius: 5px 5px 0px 0px;
+  border-bottom: solid 1px #afaeb0;
+  background: -webkit-linear-gradient(top, #f0f0f0 0%, #e1e1e1 100%);
+  background: -moz-linear-gradient(top, #f0f0f0 0%, #e1e1e1 100%);
+}
+
+.commentBox div.body{
+  height: 80px;
+  border-width: 0px;
+  padding: 10px;
+  border-radius: 0px 0px 5px 5px;
+  background-color: white;
+}
+
+.commentAuthor{
+  margin-left: 10px;
+  font-size: 12px;
+  height: 34px;
+  line-height: 34px;
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7);
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 a:link {text-decoration: none}
 a:visited {text-decoration: none}
 a:active {text-decoration: none}
@@ -376,6 +452,16 @@ div.closePopUp{
   -moz-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.4);
   -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.4);
   box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.4);
+}
+
+div.tabContent {
+  padding: 15px;
+}
+
+div.tabContent p{
+  margin-bottom: 15px;
+  color: #464547;
+  text-align: left;
 }
 
 #tabsBar div:first-child.tab{
