--- a/templates/dashboardPanel.mustache
+++ b/templates/dashboardPanel.mustache
@@ -7,257 +7,6 @@
     <link rel="stylesheet" href="/css/gadget.css">
     <link rel="stylesheet" href="/css/dashboardPanel.css"> 
     <link rel="stylesheet" href="/css/widgets.css"> 
-    
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.js" type="text/javascript"></script>
-    <script src="/modernizr.custom.80028.js"></script>
-    <script src="/underscore.js" type="text/javascript"></script>
-    <script src="/backbone.js" type="text/javascript"></script>
-    <script src="/faye/faye.js" type="text/javascript"></script>
-    <script src="/logs.js" type="text/javascript"></script>
-    <script src="/util.js" type="text/javascript"></script>
-    <script src="/gadget.js" type="text/javascript"></script>
-    <script src="/layoutManager.js" type="text/javascript"></script>
-    <script src="/dataSetModifier.js" type="text/javascript"></script> 
-    <script src="/dataSet.js" type="text/javascript"></script> 
-    <script src="/renderer.js" type="text/javascript"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/share/share.uncompressed.js"></script>
-    <script src="/share/json.uncompressed.js"></script>
-    <script src="/xhr.js" type="text/javascript"></script> 
-    <script src="/dashboard.js" type="text/javascript"></script>
-    
-    <script type="text/javascript">
-
-    var ASCOT = ASCOT || {};
-    var dashboardId = {{id}};
-    var resourceUrl = {{resourceUrl}};
-    var closeAlertTimeout;
-
-    $(function(){
-      initDashboard();
-    });
-
-    var insertComment = function(comment){
-      var listEntry = document.createElement('li');
-      var commentBox = document.createElement('div');
-      var meta = document.createElement('div');
-      var body = document.createElement('div');
-      commentBox.className = 'commentBox';
-      meta.className = 'meta';
-      body.className = 'body';
-      body.innerHTML = '<p>' + comment.text + '</p>';
-      meta.innerHTML = '<p class="commentAuthor"><strong>' + comment.author + '</strong> commented</p>';
-      commentBox.appendChild(meta);
-      commentBox.appendChild(body);
-      listEntry.appendChild(commentBox);
-      $('#messagesList').append(listEntry);
-      $('#messagesList').css('display', 'block');
-    };
-
-    function publishComment(){
-      var comment = $('#commentInputBox').val();
-      if (comment !== "") {
-        ASCOT.dashboard.publishComment(comment);
-      }
-    }
-
-    var finishedLoading = function(){
-      var comments = ASCOT.dashboard.getComments();
-      ASCOT.dashboard.onNotification('dataSetChanged', updateDataSetPanel); 
-      ASCOT.dashboard.onNotification('commentPublished', insertComment); 
-      for (var i=0; i < comments.length; ++i) {
-        insertComment(comments[i]);
-      }
-      $('#loadingBar').toggle();
-    };
-
-    var initDashboard = function() {
-      ASCOT.dashboard = new UW.Dashboard(dashboardId);
-      ASCOT.dashboard.setContainer($("#" + 'dashboardPanel').get(0));
-      ASCOT.dashboard.setUrl(resourceUrl + '/' + dashboardId);
-      ASCOT.dashboard.init(finishedLoading);
-      initGUI();
-      return ASCOT.dashboard;
-    };
-
-    function undo() {
-      ASCOT.dashboard.undo();
-    }
-
-    function redo() {
-      ASCOT.dashboard.redo();
-    }
-
-    function loadDataset(){
-      var successLoading = function(){
-        $('#spinnerLoadingDataset').toggle();
-        $('#loadDataset').toggle();
-      };
-      var url = $('#datasetURL').val();
-      if (url) {
-        $('#spinnerLoadingDataset').toggle();
-        $('#loadDataset').toggle();
-        ASCOT.dashboard.fetchDataSet($('#datasetURL').val(), successLoading);
-      }
-    }
-
-    function forkDashboard() {
-      var succesForked = function(id){
-        displayNote('The dashboard has been forked');
-        setTimeout(function() { document.location.href = "/dashboard/" + id }, 1000);
-      }
-      ASCOT.dashboard.fork(succesForked);
-    }
-
-    function tabClicked(){
-      if($(this).hasClass('opened')){
-        return;
-      }
-      $('#tabsBar').children().removeClass('opened');
-      $('#tabsBar').children().css('cursor','pointer');
-      $('#tabsBar').children().hover(tabHoverIn, tabHoverOut);
-      $(this).addClass('opened');
-      $(this).unbind('mouseenter').unbind('mouseleave');
-      $(this).css('border','1px solid rgba(0, 0, 0, 0.4)');
-      $(this).css('cursor','auto');
-      
-      $('#content').children().hide();
-      switch($(this).attr('id')){
-        case 'dashboardTab':
-          $('#dashboardPanel').show();
-          break;
-        case 'dataSetsTab':
-          updateDataSetPanel();
-          $('#dataSetsPanel').show();
-          break;
-        case 'discussionTab':
-          $('#discussionPanel').show();
-          break;  
-      } 
-    }
-    
-    var updateDataSetPanel = function(){
-      var dataSet;
-      var dataSetList = ASCOT.dashboard.getDataSetList();
-      var unloadButton;
-      $('#dataSetsList').empty();
-      if (dataSetList.length > 0) {
-        $('#lodadedDataSets').css('visibility', 'visible');
-      } else {
-        $('#lodadedDataSets').css('visibility', 'hidden');
-      }
-      for (var i = 0; i < dataSetList.length; ++i){
-        dataSetEntry = document.createElement("li");
-        dataSetEntry.style.margin = "0px";
-        dataSetInfo = document.createElement("div");
-        dataSetInfo.className = 'dataSetInfo';
-        if ((i & 1) === 1) {
-          dataSetInfo.style['background-color'] = '#faf9fc';
-        }
-        
-        unloadButton = document.createElement("input");
-        unloadButton.setAttribute('type','button');
-        unloadButton.setAttribute('value', 'unload');
-        unloadButton.onclick = (function() {
-          var id = dataSetList[i].id;
-          return function() { 
-            ASCOT.dashboard.unloadDataSet(id);
-          }
-        })();
-
-        unloadButton.className = 'cancelButton';
-        unloadButton.style.float = 'right';
-
-        dataSetInfo.innerHTML = 
-          '<span class="dataSetLabel">Name: <strong>' + ASCOT.dashboard.getDataSet(dataSetList[i].id).name + '</strong></span>' +
-          '<span class="dataSetLabel">Author: <strong>Anonymous</strong></span>' +
-          '<span class="dataSetLabel">Records: <strong>' + ASCOT.dashboard.getDataSet(dataSetList[i].id).length() + '</strong></span>' +
-          '<span class="dataSetLabel">Url: <a href="http://localhost/dataset/' + dataSetList[i].id + '">http://localhost/dataset/' + dataSetList[i].id + '</a></span>';
-
-        dataSetInfo.appendChild(unloadButton)
-        dataSetEntry.appendChild(dataSetInfo);
-        $('#dataSetsList').append(dataSetEntry);
-      }
-    }
-
-    function tabHoverIn(){
-      $(this).css('border','1px solid rgba(0, 0, 0, 1)'); 
-      $(this).children().css('color','inherit');           
-    }
-    
-    function tabHoverOut(){
-      $(this).css('border','1px solid rgba(0, 0, 0, 0.4)');
-      $(this).children().css('color','#464547');  
-    }
-    
-    function closePopUpHoverIn(){
-      $(this).css('background','url("/images/closePopUpHover.png")');      
-    }
-    
-    function closePopUpHoverOut(){
-      $(this).css('background','url("/images/closePopUp.png")');
-    }
-
-    function initGUI() {
-      $('#closeNote').click(hideNote);
-      $('.tab').click(tabClicked);
-      $('.closePopUp').click(function() { hidePopUp('popUp') });
-      $('.closePopUp').hover(closePopUpHoverIn, closePopUpHoverOut);
-      $('.tab').hover(tabHoverIn, tabHoverOut);
-      $('#tabsBar').children().css('cursor','pointer');
-      $('#dashboardTab').css('cursor','auto'); 
-      $('#dashboardTab').unbind('mouseenter').unbind('mouseleave');
-      $('#datasetURL').css('color', '#cccccc');
-      $('#datasetURL').val("http://");
-      $('#datasetURL').click(function(){
-        $(this).css('color', '#3A3A3A');
-      });
-      $(window).resize(function() { placePopUp('popUp') }); 
-    }
-    
-    function hideNote(){
-      $('#note').css('display','none');
-      clearTimeout(closeAlertTimeout);
-    }
-    
-    var displayNote = function(message, persistent){
-      var note = $('#note');
-      var newNote = note.clone(true);
-      var closeButton = $('#closeNote');
-      newNote.html('');
-      newNote.append(message + " ");
-      newNote.append(closeButton);
-      note.before(newNote);
-      newNote.toggle();
-      $("." + note.attr('class') + ':last').remove();
-      if(!persistent){
-        closeAlertTimeout = setTimeout('hideNote()',2000);
-      }
-    }
-    
-    function placePopUp(popUpId){
-      var popUp = $('#' + popUpId);
-      var viewPortHeight = $(window).height();
-      var viewPortWidth = $(window).width();      
-      var popUpTop = (viewPortHeight - popUp.height())/2 - 200;
-      var popUpLeft = (viewPortWidth - popUp.width())/2;
-      var popUpMask = $('#popUpMask');
-      popUp.css('top', popUpTop + 'px');
-      popUp.css('left', popUpLeft + 'px');
-      popUpMask.css('height', viewPortHeight + 'px');
-    }
-    
-    function showPopUp(popUpId) {
-      placePopUp(popUpId);      
-      $('#popUpMask').toggle();     
-      $('#' + popUpId).toggle();     
-    }
-    
-    function hidePopUp(popUpId) {
-      $('#popUpMask').toggle();     
-      $('#' + popUpId).toggle(); 
-    }
-    </script>
   </head>
   <body>
     <div id="popUpMask" style="display: none"></div>
@@ -329,7 +78,7 @@
             <div id="dataSetsPanelContent">
               <ul id="messagesList" style="display: none"></ul>
               <div id="commentInputBoxWrapper" style="padding-right: 25px">
-                <textarea id="commentInputBox" type="text" name="comment" class="big" style="border-color: #afaeb0; width: 100%; padding: 10px; height: 100px;"></textarea>
+                <textarea id="commentInputBox" type="text" name="comment" class="big" style="width: 100%; padding: 10px; height: 100px;"></textarea>
               </div>
               <input id="publishButton" class="confirmButton" style="font-size: 14px; display: block" onclick="publishComment()" type="button" value="Publish Comment"/> 
             </div>
@@ -345,4 +94,259 @@
       </tr>
     </table>
   </body>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.js" type="text/javascript"></script>
+  <script src="/modernizr.custom.80028.js"></script>
+  <script src="/underscore.js" type="text/javascript"></script>
+  <script src="/backbone.js" type="text/javascript"></script>
+  <script src="/faye/faye.js" type="text/javascript"></script>
+  <script src="/keymaster.js" type="text/javascript"></script>
+  <script src="/logs.js" type="text/javascript"></script>
+  <script src="/util.js" type="text/javascript"></script>
+  <script src="/gadget.js" type="text/javascript"></script>
+  <script src="/layoutManager.js" type="text/javascript"></script>
+  <script src="/dataSetModifier.js" type="text/javascript"></script> 
+  <script src="/dataSet.js" type="text/javascript"></script> 
+  <script src="/renderer.js" type="text/javascript"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/share/share.uncompressed.js"></script>
+  <script src="/share/json.uncompressed.js"></script>
+  <script src="/xhr.js" type="text/javascript"></script> 
+  <script src="/dashboard.js" type="text/javascript"></script>
+
+  <script type="text/javascript">
+
+  var ASCOT = ASCOT || {};
+  var dashboardId = {{id}};
+  var resourceUrl = {{resourceUrl}};
+  var closeAlertTimeout;
+
+  $(function(){
+    initDashboard();
+  });
+
+  // Keyboard shortcuts
+  key('⌘+z, ctrl+shift+z', undo);
+  key('⌘+shift+z, ctrl+shift+z', redo);
+
+  var insertComment = function(comment){
+    var listEntry = document.createElement('li');
+    var commentBox = document.createElement('div');
+    var meta = document.createElement('div');
+    var body = document.createElement('div');
+    commentBox.className = 'commentBox';
+    meta.className = 'meta';
+    body.className = 'body';
+    body.innerHTML = '<p>' + comment.text + '</p>';
+    meta.innerHTML = '<p class="commentAuthor"><strong>' + comment.author + '</strong> commented</p>';
+    commentBox.appendChild(meta);
+    commentBox.appendChild(body);
+    listEntry.appendChild(commentBox);
+    $('#messagesList').append(listEntry);
+    $('#messagesList').css('display', 'block');
+  };
+
+  function publishComment(){
+    var comment = $('#commentInputBox').val();
+    if (comment !== "") {
+      ASCOT.dashboard.publishComment(comment);
+    }
+  }
+
+  var finishedLoading = function(){
+    var comments = ASCOT.dashboard.getComments();
+    ASCOT.dashboard.onNotification('dataSetChanged', updateDataSetPanel); 
+    ASCOT.dashboard.onNotification('commentPublished', insertComment); 
+    for (var i=0; i < comments.length; ++i) {
+      insertComment(comments[i]);
+    }
+    $('#loadingBar').toggle();
+  };
+
+  var initDashboard = function() {
+    ASCOT.dashboard = new UW.Dashboard(dashboardId);
+    ASCOT.dashboard.setContainer($("#" + 'dashboardPanel').get(0));
+    ASCOT.dashboard.setUrl(resourceUrl + '/' + dashboardId);
+    ASCOT.dashboard.init(finishedLoading);
+    initGUI();
+    return ASCOT.dashboard;
+  };
+
+  function undo() {
+    ASCOT.dashboard.undo();
+  }
+
+  function redo() {
+    ASCOT.dashboard.redo();
+  }
+
+  function loadDataset(){
+    var successLoading = function(){
+      $('#spinnerLoadingDataset').toggle();
+      $('#loadDataset').toggle();
+    };
+    var url = $('#datasetURL').val();
+    if (url) {
+      $('#spinnerLoadingDataset').toggle();
+      $('#loadDataset').toggle();
+      ASCOT.dashboard.fetchDataSet($('#datasetURL').val(), successLoading);
+    }
+  }
+
+  function forkDashboard() {
+    var succesForked = function(id){
+      displayNote('The dashboard has been forked');
+      setTimeout(function() { document.location.href = "/dashboard/" + id }, 1000);
+    }
+    ASCOT.dashboard.fork(succesForked);
+  }
+
+  function tabClicked(){
+    if($(this).hasClass('opened')){
+      return;
+    }
+    $('#tabsBar').children().removeClass('opened');
+    $('#tabsBar').children().css('cursor','pointer');
+    $('#tabsBar').children().hover(tabHoverIn, tabHoverOut);
+    $(this).addClass('opened');
+    $(this).unbind('mouseenter').unbind('mouseleave');
+    $(this).css('border','1px solid rgba(0, 0, 0, 0.4)');
+    $(this).css('cursor','auto');
+    
+    $('#content').children().hide();
+    switch($(this).attr('id')){
+      case 'dashboardTab':
+        $('#dashboardPanel').show();
+        break;
+      case 'dataSetsTab':
+        updateDataSetPanel();
+        $('#dataSetsPanel').show();
+        break;
+      case 'discussionTab':
+        $('#discussionPanel').show();
+        break;  
+    } 
+  }
+
+  var updateDataSetPanel = function(){
+    var dataSet;
+    var dataSetList = ASCOT.dashboard.getDataSetList();
+    var unloadButton;
+    $('#dataSetsList').empty();
+    if (dataSetList.length > 0) {
+      $('#lodadedDataSets').css('visibility', 'visible');
+    } else {
+      $('#lodadedDataSets').css('visibility', 'hidden');
+    }
+    for (var i = 0; i < dataSetList.length; ++i){
+      dataSetEntry = document.createElement("li");
+      dataSetEntry.style.margin = "0px";
+      dataSetInfo = document.createElement("div");
+      dataSetInfo.className = 'dataSetInfo';
+      if ((i & 1) === 1) {
+        dataSetInfo.style['background-color'] = '#faf9fc';
+      }
+      
+      unloadButton = document.createElement("input");
+      unloadButton.setAttribute('type','button');
+      unloadButton.setAttribute('value', 'unload');
+      unloadButton.onclick = (function() {
+        var id = dataSetList[i].id;
+        return function() { 
+          ASCOT.dashboard.unloadDataSet(id);
+        }
+      })();
+
+      unloadButton.className = 'cancelButton';
+      unloadButton.style.float = 'right';
+
+      dataSetInfo.innerHTML = 
+        '<span class="dataSetLabel">Name: <strong>' + ASCOT.dashboard.getDataSet(dataSetList[i].id).name + '</strong></span>' +
+        '<span class="dataSetLabel">Author: <strong>Anonymous</strong></span>' +
+        '<span class="dataSetLabel">Records: <strong>' + ASCOT.dashboard.getDataSet(dataSetList[i].id).length() + '</strong></span>' +
+        '<span class="dataSetLabel">Url: <a href="http://localhost/dataset/' + dataSetList[i].id + '">http://localhost/dataset/' + dataSetList[i].id + '</a></span>';
+
+      dataSetInfo.appendChild(unloadButton)
+      dataSetEntry.appendChild(dataSetInfo);
+      $('#dataSetsList').append(dataSetEntry);
+    }
+  }
+
+  function tabHoverIn(){
+    $(this).css('border','1px solid rgba(0, 0, 0, 1)'); 
+    $(this).children().css('color','inherit');           
+  }
+
+  function tabHoverOut(){
+    $(this).css('border','1px solid rgba(0, 0, 0, 0.4)');
+    $(this).children().css('color','#464547');  
+  }
+
+  function closePopUpHoverIn(){
+    $(this).css('background','url("/images/closePopUpHover.png")');      
+  }
+
+  function closePopUpHoverOut(){
+    $(this).css('background','url("/images/closePopUp.png")');
+  }
+
+  function initGUI() {
+    $('#closeNote').click(hideNote);
+    $('.tab').click(tabClicked);
+    $('.closePopUp').click(function() { hidePopUp('popUp') });
+    $('.closePopUp').hover(closePopUpHoverIn, closePopUpHoverOut);
+    $('.tab').hover(tabHoverIn, tabHoverOut);
+    $('#tabsBar').children().css('cursor','pointer');
+    $('#dashboardTab').css('cursor','auto'); 
+    $('#dashboardTab').unbind('mouseenter').unbind('mouseleave');
+    $('#datasetURL').css('color', '#cccccc');
+    $('#datasetURL').val("http://");
+    $('#datasetURL').click(function(){
+      $(this).css('color', '#3A3A3A');
+    });
+    $(window).resize(function() { placePopUp('popUp') }); 
+  }
+
+  function hideNote(){
+    $('#note').css('display','none');
+    clearTimeout(closeAlertTimeout);
+  }
+
+  var displayNote = function(message, persistent){
+    var note = $('#note');
+    var newNote = note.clone(true);
+    var closeButton = $('#closeNote');
+    newNote.html('');
+    newNote.append(message + " ");
+    newNote.append(closeButton);
+    note.before(newNote);
+    newNote.toggle();
+    $("." + note.attr('class') + ':last').remove();
+    if(!persistent){
+      closeAlertTimeout = setTimeout('hideNote()',2000);
+    }
+  }
+
+  function placePopUp(popUpId){
+    var popUp = $('#' + popUpId);
+    var viewPortHeight = $(window).height();
+    var viewPortWidth = $(window).width();      
+    var popUpTop = (viewPortHeight - popUp.height())/2 - 200;
+    var popUpLeft = (viewPortWidth - popUp.width())/2;
+    var popUpMask = $('#popUpMask');
+    popUp.css('top', popUpTop + 'px');
+    popUp.css('left', popUpLeft + 'px');
+    popUpMask.css('height', viewPortHeight + 'px');
+  }
+
+  function showPopUp(popUpId) {
+    placePopUp(popUpId);      
+    $('#popUpMask').toggle();     
+    $('#' + popUpId).toggle();     
+  }
+
+  function hidePopUp(popUpId) {
+    $('#popUpMask').toggle();     
+    $('#' + popUpId).toggle(); 
+  }
+  </script>
 </html>
