--- a/public/css/gadget.css
+++ b/public/css/gadget.css
@@ -17,6 +17,11 @@ body {
   -webkit-box-shadow: rgba(0, 0, 0, .3) 0px 0px 2px;
   -moz-box-shadow: rgba(0, 0, 0, .3) 0px 0px 2px;
   box-shadow: rgba(0, 0, 0, .3) 0px 0px 2px;
+
+  opacity: 0.01;
+  transition: opacity .5s ease-out;
+  -moz-transition: opacity .5s ease-out;
+  -webkit-transition: opacity .5s ease-out;
 }
 
 .gadgetCanvas {
