--- a/public/css/fitsViewer.css
+++ b/public/css/fitsViewer.css
@@ -3,7 +3,9 @@ canvas {
   -webkit-user-select: none;
 }
 input{
-  font-size: 20px;
+	margin: 0;
+	padding: 0;
+  font-size: 16px;
 }
 #title{
  font-weight: bold;
@@ -23,25 +25,42 @@ input{
  height: 252px;
  z-index: -1; 
 }
+#wrapper{ 
+  width: auto;     
+  margin: auto; 
+  padding: 10px;
+}
 #dropbox{
-  display: inline-block;
+  display: block;
   background-color: #F0EFD1;
   border-radius: 5px;
   padding: 10px;
-  width: 640px;
+  width: auto;
   height: 480px;
   border: 2px solid black;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   text-align: center;
 }
-#annoControls{
-  display: inline-block;
+#annoControlsContainer{
+  display: block;
   background-color: #F0EFD1;
   border-radius: 5px;
   padding: 10px;
-  width: 640px;
-  height: 300px;
+  width: auto;
+  height: 270px;
+  border: 2px solid black;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  text-align: left;
+}
+#infoAndSliders{
+  display: block;
+  background-color: #F0EFD1;
+  border-radius: 5px;
+  padding: 10px;
+  width: auto;
+  height: 270px;
   border: 2px solid black;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -57,15 +76,9 @@ input{
   margin-top: 200px;
   font: 22px 'Lucida Grande', 'Helvetica Neue', Arial, sans-serif;
 }
-#wrapper{ 
-  width: 1200px;     
-  margin: auto; 
-  padding: 10px;
-}
 #fileChooser{
-	height: 100px;
 	display: block;
-	padding-top: 10px;
+	height: 32px;
 }
   
 .ui-slider {
