--- a/public/css/fitsViewer.css
+++ b/public/css/fitsViewer.css
@@ -48,7 +48,7 @@ input{
   border-radius: 5px;
   padding: 10px;
   width: auto;
-  height: 270px;
+  height: 100%;
   border: 2px solid black;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
