--- a/templates/dashboardPanel.mustache
+++ b/templates/dashboardPanel.mustache
@@ -94,7 +94,7 @@
       </tr>
     </table>
   </body>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.js" type="text/javascript"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <script src="/modernizr.custom.80028.js"></script>
   <script src="/underscore.js" type="text/javascript"></script>
   <script src="/backbone.js" type="text/javascript"></script>
